2021-07-27  Sihui Liu  <sihui_liu@apple.com>

        Update platform specific TestExpectations for imported IndexedDB tests
        https://bugs.webkit.org/show_bug.cgi?id=228241

        Reviewed by Alex Christensen.

        Update LayoutTests/TestExpectations based on latest test results as we have fixed some existing issues, and
        these tests should not fail now.

        * platform/ios-device/TestExpectations:
        * platform/ios-simulator-wk2/TestExpectations:
        * platform/ios-wk2/TestExpectations:
        * platform/ios/TestExpectations:
        * platform/mac-wk1/TestExpectations:
        * platform/mac-wk2/TestExpectations:
        * platform/mac/TestExpectations:

2021-07-27  Devin Rousso  <drousso@apple.com>

        [Modern Media Controls] [macOS] Overflow button still shows as `on` even after contextmenu is dismissed
        https://bugs.webkit.org/show_bug.cgi?id=228310
        <rdar://problem/81124786>

        Reviewed by Wenson Hsieh.

        * media/modern-media-controls/overflow-support/button-state.html: Added.
        * media/modern-media-controls/overflow-support/button-state-expected.txt: Added.

        * media/modern-media-controls/overflow-support/playback-speed.html:
        * media/modern-media-controls/tracks-support/click-track-in-contextmenu.html:
        Adjust how these tests wait for and dismiss the contextmenu.

2021-07-27  Amir Mark Jr  <amir_mark@apple.com>

        [LayoutTests] Delete unused LayoutTests/inspector resources
        https://bugs.webkit.org/show_bug.cgi?id=226800

        Reviewed by Jonathan Bedard.

        * inspector/console/resources/errors.css: Removed.
        * inspector/dom/resources/highlight-iframe.html: Removed.
        * inspector/network/resources/data-intercepted.json: Removed.

2021-07-27  Alexey Shvayka  <shvaikalesh@gmail.com>

        ProxyObject callees should be skipped during Function.prototype.caller resolution
        https://bugs.webkit.org/show_bug.cgi?id=228341
