@@ -1,7 +1,0 @@
-<p>Test for <a href="https://bugs.webkit.org/show_bug.cgi?id=58638">bug 58638</a>: 
-Do not allow fullscreen from within a &lt;frame&gt; element, even with the <i>webkitallowfullscreen</i> attribute set.</p>
-<p>To test manually, click the "Go full screen" button - the page should not enter full screen mode.</p>
-<div id="console"></div>
-<script>
-    top.consoleDiv = document.getElementById('console');
-</script>
